--- a/Portfolio-Ana-Julia-05-main/Portfólio- Ana Julia- 05/index.html
+++ b/Portfolio-Ana-Julia-05-main/Portfólio- Ana Julia- 05/index.html
@@ -4,25 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de Ana Julia Giorgetti</title>
+    <title>Portfólio Ana Julia Giorgetti</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-
 <body>
     <img src="img/perfil.jpg" alt="">
-    <p class="perfil">Eu sou Ana Julia</p>
+    <p class="perfil">Eu sou Ana Julia_</p>
     <h1>Eu estudo Programação</h1>
-    <p class="desc">Sou estudante do Ensino Médio do Ieel. Estudo pensamento computacional usando HTML, CSS e
-        JavaScript. Veja os projetos que já desenvolvi!
-    </p>
-    <p class="desc">Minhas habilidades</p>
+    <p class="desc">Sou estudante do ensino médio. Estudo pensamento computacional. 
+        <br> Aprendo sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!</p>
+    <p class="desc">Minhas Habilidades</p>
     <div>
-        <p class="habilidades">HTML</p>
-        <p class="habilidades"> CSS</p>
-        <p class="habilidades">JavaScript</p>
-        <p class="habilidades">SCRATCH</p>
+        <a class="habilidades">HTML</a>
+        <a class="habilidades">css</a>
+        <a class="habilidades">JavaScript</a>
+        <a class="habilidades">SCRATCH</a>
     </div>
+    <h2>Meus Projetos</h2>
 </body>
 
 </html>
